# Chip-8

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
inc/: Config.hpp  audio.hpp  chip8.hpp  chip8_imgui_style.hpp  config.hpp  core.hpp  display.hpp  enums.hpp  instructions.hpp  logger.hpp  memory.hpp  quirks.h  quirks.hpp
inc/Audio/: audio.hpp
inc/CHIP48/: chip48_display.hpp  chip48_instructions.hpp  chip48_memory.hpp  chip48_quirks.hpp
inc/CHIP8/: chip8_audio.hpp  chip8_display.hpp  chip8_instructions.hpp  chip8_memory.hpp  chip8_quirks.hpp
inc/SCHIP/: schip_display.hpp  schip_display_i.hpp  schip_instructions.hpp  schip_instructions_i.hpp  schip_memory.hpp  schip_quirks.hpp
inc/SDL/: window_renderer.hpp
inc/XOCHIP/: xochip_audio.hpp  xochip_display.hpp  xochip_instructions.hpp  xochip_memory.hpp  xochip_quirks.hpp
roms/tests/: imgui.ini
src/: chip8.cpp  chip8_imgui.cpp  chip8_instructions.cpp  instructions.cpp  main.cpp
src/Audio/: audio.cpp
src/CHIP48/: chip48_instructions.cpp
src/CHIP8/: chip8_audio.cpp  chip8_instructions.cpp
src/SCHIP/: schip_display.cpp  schip_display_i.cpp  schip_instructions.cpp  schip_instructions_i.cpp
src/SDL/: window_renderer.cpp
src/XOCHIP/: xochip_audio.cpp  xochip_display.cpp  xochip_instructions.cpp
